Update plugin to 1.21.10 w/ base functions